crates/tui/tests/snapshots/explorer__explorer_100x26_dark_tokens.snap
---
source: crates/tui/tests/explorer.rs
expression: "token_map(&mut h, &th)"
---
tokens: t text, d dim, m muted, A accent, o on_accent, C cursor, W cursor_text, S sel,
M mark, B cmdbar, P panel, K key_bg, Y key_text, F field, U button, E selection, r track,
s success, w warn, e error, k file kind, + a tint, . none

text colour
AAAAAAttttttttddd.ddd...................................................ddddddddddddddddddddAAAAAAAA
.mmm.mmm.ttt.ttt..ddddddmmmddddddddmmmtttt...............................ddddddddddddddddd..mmmmmmm.
.ooooooooo.m.ttttt..tttttt..ttttttt..tttttttt..tttttttttt..tttttttt.m.tttttttt..tttttttt.m.mmmmmm.tt
Adddttttttttttttttttttttttttmmmm..AAAAAAAAAAAAAAA..dddddddddddddd..dddddddddddddddddddd..dddddddddd.
............................mAm.AAAAAAAA...........dddddddddddddd..dddddddddddddddddddd..dddddddddd.
mmmmmmm.....................mAm.AAAAAA.............dddddddddddddd..dddddddddddddddddddd..dddddddddd.
AdddtttttttttttttttttttttmmmmAm.AAAAAAAAA..........dddddddddddddd..dddddddddddddddddddd..dddddddddd.
AdddtttttttttttttttttttttmmmmAm.AAAAA..............dddddddddddddd..dddddddddddddddddddd..dddddddddd.
AdddtttttttttttttttttttttmmmmAm.AAAAAAA............dddddddddddddd..dddddddddddddddddddd..dddddddddd.
AdddtttttttttttttttttttttmmmmAA.kktttttttttttttt...dddddddddddddd..dddddddddddddddddddd..dddddddddd.
AdddtttttttttttttttttttttmmmmAA.kktttttttttt.......dddddddddddddd..dddddddddddddddddddd..dddddddddd.
AdddtttttttttttttttttttttmmmmAA.kktttttttttt.......dddddddddddddd..dddddddddddddddddddd..dddddddddd.
............................mAm.kkttttttttt........dddddddddddddd..dddddddddddddddddddd..dddddddddd.
mmmmmmmm....................mAm.kktttttttt.........dddddddddddddd..dddddddddddddddddddd..dddddddddd.
AdddttttttttttttttttttttttttmAm.kktttttttt.........dddddddddddddd..dddddddddddddddddddd..dddddddddd.
A...AAAAAAAAAmmmmmm.ddddddd.mAm.kkttttttt..........dddddddddddddd..dddddddddddddddddddd..dddddddddd.
AdddttttttttttttttttttttttttmAm.kkttttttttt........dddddddddddddd..dddddddddddddddddddd..dddddddddd.
A...AAAAAAmmmmmmmmm.ddddddd.mAWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWW
AdddttttttttttttttttttttttttmAm.kkttttttttt........dddddddddddddd..dddddddddddddddddddd..dddddddddd.
A...AAAAAAmmmmmmmmm.ddddddd.mAm.kktttttttttt.......dddddddddddddd..dddddddddddddddddddd..dddddddddd.
............................mAm.kktttttttttttttt...dddddddddddddd..dddddddddddddddddddd..dddddddddd.
............................mAm.kktttttttt.........dddddddddddddd..dddddddddddddddddddd..dddddddddd.
............................mAm.kktttttttt.........dddddddddddddd..dddddddddddddddddddd..dddddddddd.
............................m.......................................................................
.ttttttttmmmmmAAAAAAAAAAAAAAAAAAAAAAmmmmmkkkkkkkkkkkkkkkkkkkkkkkk.....ddddddddddddAAAAAAmmmm.AAAddd.
..YYYYYYYYddddd....YYYYYYYYdddd....YYYYYdddddd....YYYYYYYYYYYddddddd....YYYddddddddddd..............

background
MMMMMMEEEEEEEEEEEMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
MMMMMMMMMUUUMUUUMFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFMFFFFFFFFFFFFFFFFFFFFFFFFFFM
BAAAAAAAAABBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
.............................FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
....................................................................................................
....................................................................................................
....................................................................................................
....................................................................................................
....................................................................................................
.............................SSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSS
.............................SSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSS
.............................SSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSS
....................................................................................................
....................................................................................................
....................................................................................................
....................................................................................................
....................................................................................................
.............................CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC
....................................................................................................
....................................................................................................
....................................................................................................
....................................................................................................
....................................................................................................
....................................................................................................
MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMEEEMMMM
PPKKKKKKKKPPPPPPPPPKKKKKKKKPPPPPPPPKKKKKPPPPPPPPPPKKKKKKKKKKKPPPPPPPPPPPKKKPPPPPPPPPPPPPPPPPPPPPPPPP
